       bnf_build_units, bnf_build_matalpha
   16- [libpari] rnf_zkabs
   17- [libpari] get_nf_field (black box field arithemtic over a number
       field nf), nfM_det, nfM_inv, nfM_mul, nfM_nfC_mul
   18- [libpari] bnftestprimes
   19- [libpari] upr_norm
   20- [libpari] bid_get_fact, bid_get_ind, bid_get_sarch, bid_get_sprk
   21- [libpari] qfbforms
   22- [libpari] nfroots_if_split
   23- [libmari] nfmaxord_to_nf, nfinit_basic, nfinit_complete

  Changed
    1- remove useless flag in idealappr: directly allow factorization
    2- [libpari] idealappr0 is now obsolete: use idealappr
    3- replace qfbil(x,y,{q}) by qfeval({q},x,y) and qfnorm(x,{q}) by
       qfeval({q},x): it makes more sense to have q first, and a single
       function for qf+polar form (as in all other qf-like routines:
       ellheight, etc.)
    4- functions nfeltdivmodpr, nfeltmulmodpr, nfeltpowmodpr, nfeltreducemodpr,
       nfkermodpr, nfsolvemodpr are obsolete. Use nfmodpr, work in the finite
       field, then lift back using nfmodprlift.
    5- split off historical refcard in submodules basic, ell, lfun, mf, nf
    6- rewrite nfeltinv / nfeltdiv (use mult. table rather than polmod
       representation)
    7- idealred algorithm (find small y in I^(-1), not in I)
    8- bnf format (allow dynamically adding units): old bnfs will be detected
       as invalid. Dirty trick to force conversion: bnf[10]=vector(3);
    9- nfelt* functions may now return scalars (t_INT/t_FRAC) in addition to
       t_COL on nf.zk basis.
   10- remove flag = 2 in nfgaloisconj (slow, unreliable, obsolete for 15 years)
   11- bnfcertify(K): use automorphisms (speedup roughly #Aut_Q(K))
   12- idealstar format, to access data more conveniently (and avoid
       recomputations): old bid and bnr structures from versions up to 2.8.0
       are now invalid
   13- narchstar output: include finf in output
   14- set_sign_mod_divisor prototype: module is now useless (implicitly
       contained in sarch argument)