@@ -166,7 +166,6 @@ GEN    init_unif_mod_fZ(GEN L);
 GEN    make_integral(GEN nf, GEN L0, GEN f, GEN listpr);
 GEN    nf_deg1_prime(GEN nf);
 GEN    pidealprimeinv(GEN nf, GEN x);
-GEN    primedec_apply_kummer(GEN nf,GEN pol,long e,GEN p);
 GEN    rnfallbase(GEN nf, GEN *ppol, GEN *pD, GEN *pd, GEN *pfi);
 GEN    special_anti_uniformizer(GEN nf, GEN pr);
 GEN    subgroupcondlist(GEN cyc, GEN bound, GEN listKer);
