@@ -37,7 +37,8 @@ Done for version 2.8.1 (released ??/??/2016):
    20- [libpari] bid_get_fact, bid_get_ind, bid_get_sarch, bid_get_sprk
    21- [libpari] qfbforms
    22- [libpari] nfroots_if_split
-   23- [libmari] nfmaxord_to_nf, nfinit_basic, nfinit_complete
+   23- [libpari] nfmaxord_to_nf, nfinit_basic, nfinit_complete,
+       idealprimedec_kummer
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
